scenery/tests/errors/malformed-direction-anchor.typ
// expected: anchor must be a string, angle, or numeric 3-vector
#import "/lib.typ": anchor-ref
#anchor-ref("a", anchor: (1, 2))
